# swagger.yml
@@ -21,13 +21,6 @@ tags:
   externalDocs:
     description: Find out more
     url: http://swagger.io
-- name: store
-  description: Access to MAN Truck orders
-- name: user
-  description: Operations about user
-  externalDocs:
-    description: Find out more about our store
-    url: http://swagger.io
 paths:
   /trucks:
     get:
@@ -43,21 +36,19 @@ paths:
               schema:
                 type: array
                 items:
-                  type: object
-                  properties: {}
+                  $ref: '#/components/schemas/Truck'
             application/json:
               schema:
                 type: array
                 items:
-                  type: object
-                  properties: {}
+                  $ref: '#/components/schemas/Truck'
     put:
       tags:
       - truck
       summary: Update an existing truck
       operationId: updateTruck
       requestBody:
-        description: Truck object that needs to be added to the store
+        description: Truck object that needs to be updated
         content:
           application/json:
             schema:
@@ -67,6 +58,9 @@ paths:
               $ref: '#/components/schemas/Truck'
         required: true
       responses:
+        200:
+          description: Truck updated successfully
+          content: {}
         400:
           description: Invalid ID supplied
           content: {}
@@ -93,6 +87,9 @@ paths:
               $ref: '#/components/schemas/Truck'
         required: true
       responses:
+        201:
+          description: Truck added successfully
+          content: {}
         405:
           description: Invalid input
           content: {}
@@ -131,7 +128,7 @@ paths:
     post:
       tags:
       - truck
-      summary: Updates a truck in the store with form data
+      summary: Updates a truck with form data
       operationId: updateTruckWithForm
       parameters:
       - name: truckId
@@ -142,13 +139,19 @@ paths:
           type: integer
           format: int64
       requestBody:
-        description: Truck object that needs to be added to the store
+        description: Truck object that needs to be updated
         content:
           application/x-www-form-urlencoded:
             schema:
               $ref: '#/components/schemas/Truck'
         required: true
       responses:
+        200:
+          description: Truck updated successfully
+          content: {}
+        400:
+          description: Invalid ID supplied
+          content: {}
         405:
           description: Invalid input
           content: {}
@@ -167,6 +170,9 @@ paths:
           type: integer
           format: int64
       responses:
+        200:
+          description: Truck deleted successfully
+          content: {}
         400:
           description: Invalid ID supplied
           content: {}
@@ -175,30 +181,6 @@ paths:
           content: {}
 components:
   schemas:
-    User:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-        username:
-          type: string
-        firstName:
-          type: string
-        lastName:
-          type: string
-        email:
-          type: string
-        password:
-          type: string
-        phone:
-          type: string
-        userStatus:
-          type: integer
-          description: User Status
-          format: int32
-      xml:
-        name: User
     Truck:
       required:
       - colors
@@ -215,23 +197,31 @@ components:
           type: string
           example: TGX 18.44
         engineHP:
-          type: string
-          example: 440 HP
+          type: integer
+          example: 440
         engineVolume:
-          type: string
-          example: "10.518"
+          type: integer
+          example: 10518
         fuel:
           type: string
           example: diesel
-        segment:
-          type: string
-          description: truck segment
-          enum:
-          - Long Haul
+        segments:
+          type: array
+          xml:
+            name: segment
+            wrapped: true
+          items:
+            type: string
+            description: truck segment
+            enum:
+            - Long Haul
+            - Construction
+            - Firedepartment
+            - Distribution (Food)
+            - Wastedisposal
+          example:
           - Construction
           - Firedepartment
-          - Distribution (Food)
-          - Wastedisposal
         colors:
           type: array
           xml:
@@ -239,7 +229,10 @@ components:
             wrapped: true
           items:
             type: string
-            example: red
+          example:
+          - red
+          - white
+          - blue
       xml:
         name: Truck
     ApiResponse:
